--- a/index.html
+++ b/index.html
@@ -9,24 +9,17 @@
 
     <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
 
-    <!-- Favicon -->
+
     <link href="/assets/img/brand/favicon.png" rel="icon" type="image/png">
 
-    <!-- Fonts -->
+
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700,900">
 
-    <!-- Icons -->
+
     <link href="./assets/css/nucleo-icons.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2c7dc414d4.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
 
-    <!-- CSS only -->
-
-    <!-- JavaScript Bundle with Popper -->
-
-
-
-    <!-- Material Kit-->
     <link type="text/css" href="./assets/css/material-kit.css" rel="stylesheet">
     <script src="/assets/js/plugins/flatpickr.min.js"></script>
 </head>
@@ -112,8 +105,6 @@
     </div>
 
 
-
-    <!-- -------- START HEADER 1 w/ text and image on right ------- -->
     <header class="header-2" id="home">
         <div class="page-header min-vh-85"
             style="background-image: url('https://images.unsplash.com/photo-1578301978693-85fa9c0320b9?q=80&amp;w=1600&amp;auto=format&amp;fit=crop')"
@@ -131,34 +122,6 @@
             </div>
         </div>
     </header>
-    <!-- -------- END HEADER 1 w/ text and image on right ------- -->
-
-    <!-- --------
-    <header class="position-relative">
-        <div class="page-header min-vh-85" style="background-image: url(./assets/img/bg9.jpg);" loading="lazy">
-            <span class="mask bg-gradient-info opacity-4"></span>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 text-center mx-auto">
-                        <h1 class="text-white">Nossa missão é liderar o <br><span class="text-white" id="typed"></span>
-                        </h1>
-                        <div id="typed-strings">
-                            <h1>desenvolvimento web</h1>
-                            <h1>desenvolvimento mobile</h1>
-                            <h1>design web</h1>
-                        </div>
-                        <p class="lead text-white text-center mt-4">Agora é a hora de ser grande e isso estar ok. As
-                            pessoas neste mundo evitam aquelas que são grandes. Por serem de uma cor vibrante.</p>
-                        <br />
-                        <div class="buttons text-center">
-                            <button type="button" class="btn btn-white" id="scrollButton3">Fale conosco</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
-    ------- -->
 
 
 
@@ -227,8 +190,8 @@
                                         <p class="text-white opacity-8">De protótipos rápidos a código de produção,
                                             oferecemos soluções completas para acelerar seus projetos com a máxima
                                             qualidade.</p>
-                                        <a href="#" id="serv-btn"
-                                            class="btn btn-white btn-sm w-50 mx-auto mt-3">Explore as Soluções</a>
+                                        <a href="#" id="serv-btn" class="btn btn-white btn-sm w-50 mx-auto mt-3">Explore
+                                            as Soluções</a>
                                     </div>
                                 </div>
                             </div>
@@ -278,47 +241,50 @@
             </div>
         </section>
 
-        <!-- -------- START Features w/ title and 3 infos -------- -->
-<section class="py-5 servicos">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 mx-auto text-center pb-4">
-          <h2>Transforme sua ideia em uma startup</h2>
-          <p class="lead texto-startup">Estamos constantemente tentando nos expressar e realizar nossos sonhos. Se você tiver a oportunidade veja nossos serviços...</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-4 col-md-6 card1">
-          <div class="p-3 text-center">
-            <div class="icon icon-shape icon-md bg-gradient-dark shadow mx-auto">
-              <i class="material-symbols-rounded opacity-10"><i class="ph-bold ph-browsers"></i></i>
+
+        <section class="py-5 servicos">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 mx-auto text-center pb-4">
+                        <h2>Transforme sua ideia em uma startup</h2>
+                        <p class="lead texto-startup">Estamos constantemente tentando nos expressar e realizar nossos
+                            sonhos. Se você tiver a oportunidade veja nossos serviços...</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 card1">
+                        <div class="p-3 text-center">
+                            <div class="icon icon-shape icon-md bg-gradient-dark shadow mx-auto">
+                                <i class="material-symbols-rounded opacity-10"><i class="ph-bold ph-browsers"></i></i>
+                            </div>
+                            <h5 class="mt-4">Web-Site Institucional</h5>
+                            <p>Lading Pages ou um site para a sua empresa estar conectada na web.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 card2">
+                        <div class="p-3 text-center">
+                            <div class="icon icon-shape icon-md bg-gradient-info shadow mx-auto">
+                                <i class="material-symbols-rounded opacity-10"><i class="ph-bold ph-command"></i></i>
+                            </div>
+                            <h5 class="mt-4">Web-Apps</h5>
+                            <p>Quer atualizar o sistema da sua empresa oferendo praticidade ou soluções, reduzindo o
+                                custo</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 mx-md-auto card3">
+                        <div class="p-3 text-center">
+                            <div class="icon icon-shape icon-md bg-gradient-warning shadow mx-auto">
+                                <i class="material-symbols-rounded opacity-10"><i
+                                        class="ph-bold ph-device-mobile"></i></i>
+                            </div>
+                            <h5 class="mt-4">Mobile</h5>
+                            <p>Tanto Web-Site ou Web-App são responsivos e funcionam em qualquer dispositivo.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <h5 class="mt-4">Web-Site Institucional</h5>
-            <p>Lading Pages ou um site para a sua empresa estar conectada na web.</p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 card2">
-          <div class="p-3 text-center">
-            <div class="icon icon-shape icon-md bg-gradient-info shadow mx-auto">
-              <i class="material-symbols-rounded opacity-10"><i class="ph-bold ph-command"></i></i>
-            </div>
-            <h5 class="mt-4">Web-Apps</h5>
-            <p>Quer atualizar o sistema da sua empresa oferendo praticidade ou soluções, reduzindo o custo</p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 mx-md-auto card3">
-          <div class="p-3 text-center">
-            <div class="icon icon-shape icon-md bg-gradient-warning shadow mx-auto">
-              <i class="material-symbols-rounded opacity-10"><i class="ph-bold ph-device-mobile"></i></i>
-            </div>
-            <h5 class="mt-4">Mobile</h5>
-            <p>Tanto Web-Site ou Web-App são responsivos e funcionam em qualquer dispositivo.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- -------- END Features w/ title and 3 infos -------- -->
+        </section>
+
 
         <section class="py-5 portfolio" id="portfolio">
             <div class="container">
@@ -391,7 +357,8 @@
                                 <h6 class="category text-info mt-3">Site PetPlace</h6>
                                 <h3 class="text-dark">Produção de Web-Site landing page para pets</h3>
                                 <p>
-                                    Construido com um design moderno utilizando carregamento ao rolar a pagina para maior conversão simples e objetiva... <a href="javascript:;"
+                                    Construido com um design moderno utilizando carregamento ao rolar a pagina para
+                                    maior conversão simples e objetiva... <a href="javascript:;"
                                         class="text-darker icon-move-right text-sm">Veja mais
                                         <i class="fas fa-arrow-right text-xs ms-1"></i>
                                     </a>
@@ -415,8 +382,8 @@
                                     Serviços e site com carregamento ao rolar
                                 </h3>
                                 <p>
-                                    Design estruturado com foco em conversão, sensação de luxo e entendendo o publico alvo... <a
-                                        href="javascript:;" class="text-darker icon-move-right text-sm">Veja mais
+                                    Design estruturado com foco em conversão, sensação de luxo e entendendo o publico
+                                    alvo... <a href="javascript:;" class="text-darker icon-move-right text-sm">Veja mais
                                         <i class="fas fa-arrow-right text-xs ms-1"></i>
                                     </a>
                                 </p>
@@ -427,7 +394,6 @@
             </div>
         </section>
 
-        <!-- -------- START Testimonials w/ 3 cards  -------- -->
         <section class="py-5 teste" id="testemunhos">
             <div class="container">
                 <div class="row">
@@ -436,7 +402,8 @@
                             <i class="material-symbols-rounded opacity-10"><i class="ph-bold ph-user-sound"></i></i>
                         </div>
                         <h3>O que nossos clientes dizem?</h3>
-                        <p class="ptesteh3">Estamos sempre comprometidos em superar as expectativas dos nossos clientes, proporcionando
+                        <p class="ptesteh3">Estamos sempre comprometidos em superar as expectativas dos nossos clientes,
+                            proporcionando
                             resultados que transformam negócios. Veja abaixo o que eles têm a dizer sobre nossa parceria
                             e os resultados alcançados.</p>
                     </div>
@@ -500,15 +467,14 @@
             </div>
         </section>
 
-        <!-- -------- END Testimonials w/ 3 cards  -------- -->
-
 
         <section class="py-5 position-relative contato" id="contato">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 mx-auto text-center">
                         <h2>Pronto Para Começar Seu Projeto?</h2>
-                        <p class="font-weight-normal contatop">Entre em contato conosco hoje mesmo e descubra como podemos ajudar
+                        <p class="font-weight-normal contatop">Entre em contato conosco hoje mesmo e descubra como
+                            podemos ajudar
                             sua empresa a crescer com um design inovador.</p>
                     </div>
                 </div>
@@ -621,7 +587,8 @@
                 <div class="row my-5">
                     <div class="col-md-6 mx-auto text-center">
                         <h2>Perguntas Frequentes</h2>
-                        <p class="faqp">Entendemos que você possa ter algumas dúvidas sobre nosso processo e como podemos ajudar a
+                        <p class="faqp">Entendemos que você possa ter algumas dúvidas sobre nosso processo e como
+                            podemos ajudar a
                             transformar seu projeto. Abaixo, respondemos às perguntas mais comuns para garantir que você
                             se sinta totalmente seguro ao trabalhar conosco.</p>
                     </div>
@@ -717,7 +684,7 @@
 
     </div>
 
-    <!-- -------- START FOOTER 5 w/ DARK BACKGROUND ------- -->
+
     <footer class="footer pb-5 pt-8 bg-grey-100 mt-n5">
         <div class="container">
             <div class="row">
@@ -774,7 +741,6 @@
             </div>
         </div>
     </footer>
-    <!-- -------- END FOOTER 5 w/ DARK BACKGROUND ------- -->
 
 
 
@@ -784,14 +750,8 @@
     <script src="./assets/js/plugins/perfect-scrollbar.min.js" type="text/javascript"></script>
     <script src="./assets/js/plugins/moment.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-
-
-    <!--	Plugin for Select, full documentation here: https://joshuajohnson.co.uk/Choices/ -->
     <script src="./assets/js/plugins/choices.min.js" type="text/javascript"></script>
-
-    <!-- Control Center for Material Kit parallax effects, scripts for the example pages etc -->
     <script src="./assets/js/material-kit.min.js" type="text/javascript"></script>
-
     <script src="../../assets/js/plugins/countup.min.js"></script>
     <script type="text/javascript">
         if (document.getElementById("state1")) {
@@ -918,21 +878,7 @@
             targetSection.scrollIntoView({ behavior: 'smooth' });
         });
     </script>
-    <script src="https://unpkg.com/typed.js@2.0.14"></script>
-    <!--
-    <script>
-        if (document.getElementById("typed")) {
-            var typed = new Typed("#typed", {
-                stringsElement: "#typed-strings",
-                typeSpeed: 70,
-                backSpeed: 50,
-                backDelay: 200,
-                startDelay: 500,
-                loop: true
-            });
-        }
-    </script>
-    -->
+
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./assets/js/scroll.js"></script>
