--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>Roverso Dev</title>
 
-    <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
 
 
     <link href="/assets/img/brand/favicon.png" rel="icon" type="image/png">
@@ -294,7 +294,7 @@
                             <div class="col-lg-6 justify-content-center d-flex flex-column img1">
                                 <div class="card border-radius-lg">
                                     <div class="d-block blur-shadow-image">
-                                        <img src="./home.png" alt="img-blur-shadow-blog-2"
+                                        <img src="./assets/home.png" alt="img-blur-shadow-blog-2"
                                             class="img-fluid border-radius-lg">
                                     </div>
                                 </div>
@@ -319,7 +319,7 @@
                             <div class="col-lg-6 justify-content-center d-flex flex-column img2">
                                 <div class="card border-radius-lg">
                                     <div class="blur-shadow-image">
-                                        <img src="./tabela.png" alt="img-blur-shadow-blog-2"
+                                        <img src="./assets/tabela.png" alt="img-blur-shadow-blog-2"
                                             class="img-fluid border-radius-lg">
                                     </div>
                                 </div>
@@ -348,7 +348,7 @@
                             <div class="col-lg-6 justify-content-center d-flex flex-column img3">
                                 <div class="card border-radius-lg">
                                     <div class="d-block blur-shadow-image">
-                                        <img src="./pet-place-1.gif" alt="img-blur-shadow-blog-2"
+                                        <img src="./assets/pet-place-1.gif" alt="img-blur-shadow-blog-2"
                                             class="img-fluid border-radius-lg">
                                     </div>
                                 </div>
@@ -371,7 +371,7 @@
                             <div class="col-lg-6 justify-content-center d-flex flex-column img4">
                                 <div class="card border-radius-lg">
                                     <div class="blur-shadow-image">
-                                        <img src="./pet-place-2.gif" alt="img-blur-shadow-blog-2"
+                                        <img src="./assets/pet-place-2.gif" alt="img-blur-shadow-blog-2"
                                             class="img-fluid border-radius-lg">
                                     </div>
                                 </div>
