--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                     <h1 class="text-gradient text-dark font-weight-bolder"><span id="state1"
                                             countto="300">300</span>+</h1>
                                     <h5 class="mt-2 font-weight-bolder">Web Sites</h5>
-                                    <p class="font-weight-normal">Construidos do zero com um design UI</p>
+                                    <p class="font-weight-normal">Construídos do zero com um design UI e UX</p>
                                 </div>
                                 <hr class="vertical dark">
                             </div>
@@ -146,7 +146,7 @@
                                     <h1 class="text-gradient text-dark font-weight-bolder"> <span id="state2"
                                             countto="100">100</span>+</h1>
                                     <h5 class="mt-2 font-weight-bolder">Landing Pages</h5>
-                                    <p class="font-weight-normal">Gatilhos de vendas, paginas com design atrativo e
+                                    <p class="font-weight-normal">Gatilhos de vendas, páginas com design atrativo e
                                         maior conversão</p>
                                 </div>
                                 <hr class="vertical dark">
