--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                                 <div class="back back-background"
                                     style="background-image: url(https://images.unsplash.com/photo-1498889444388-e67ea62c464b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=1365&amp;q=80); background-size: cover;">
                                     <div class="card-body pt-7 text-center">
-                                        <h3 class="text-white">Descubra a Inovação</h3>
+                                        <h3 class="text-white font-weight-bolder">Descubra a Inovação</h3>
                                         <p class="text-white opacity-8">De protótipos rápidos a código de produção,
                                             oferecemos soluções completas para acelerar seus projetos com a máxima
                                             qualidade.</p>
@@ -301,7 +301,7 @@
                             </div>
                             <div class="col-lg-6 justify-content-center d-flex flex-column ps-lg-5 pt-lg-0 pt-3">
                                 <h6 class="category text-info mt-3">App Python Django</h6>
-                                <h3 class="text-dark">Produção de Web-App interno focado na solução de atendimento ao
+                                <h3 class="text-dark font-weight-bolder">Produção de Web-App interno focado na solução de atendimento ao
                                     publico.</h3>
                                 <p>
                                     Construido com um design moderno utilizando sidebar invés da convencional barra de
@@ -326,10 +326,7 @@
                             </div>
                             <div class="col-lg-6 pe-lg-5 justify-content-center d-flex flex-column pt-lg-0 pt-3">
                                 <h6 class="category text-info mt-3">App Python Django</h6>
-                                <h3>
-                                    <a href="javascript:;" class="text-dark">Tabelas com design moderno focadas na UX do
-                                        usuário</a>
-                                </h3>
+                                <h3 class="text-dark font-weight-bolder">Tabelas com design moderno focadas na UX do usuário</h3>
                                 <p>
                                     Tabelas pensadas em soluções para o atendimento, tendo função de exportar, filtro
                                     clicando nos titulos, pesquisa, badges de status do atendimento... <a
@@ -355,7 +352,7 @@
                             </div>
                             <div class="col-lg-6 justify-content-center d-flex flex-column ps-lg-5 pt-lg-0 pt-3">
                                 <h6 class="category text-info mt-3">Site PetPlace</h6>
-                                <h3 class="text-dark">Produção de Web-Site landing page para pets</h3>
+                                <h3 class="text-dark font-weight-bolder">Produção de Web-Site landing page para pets</h3>
                                 <p>
                                     Construido com um design moderno utilizando carregamento ao rolar a pagina para
                                     maior conversão simples e objetiva... <a href="javascript:;"
@@ -378,7 +375,7 @@
                             </div>
                             <div class="col-lg-6 pe-lg-5 justify-content-center d-flex flex-column pt-lg-0 pt-3">
                                 <h6 class="category text-info mt-3">Site PetPlace</h6>
-                                <h3 class="text-dark">
+                                <h3 class="text-dark font-weight-bolder">
                                     Serviços e site com carregamento ao rolar
                                 </h3>
                                 <p>
