--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                                 <p>
                                     Construido com um design moderno utilizando sidebar invés da convencional barra de
                                     navegação no topo, alguns cards na home page trazendo informações importantes,
-                                    suporte ao dark mode, sistema de notificações... <a href="javascript:;"
+                                    suporte ao dark mode, sistema de notificações... <a href="http://3.141.10.15/"
                                         class="text-darker icon-move-right text-sm">Veja mais
                                         <i class="fas fa-arrow-right text-xs ms-1"></i>
                                     </a>
@@ -329,8 +329,8 @@
                                 <h3 class="text-dark font-weight-bolder">Tabelas com design moderno focadas na UX do usuário</h3>
                                 <p>
                                     Tabelas pensadas em soluções para o atendimento, tendo função de exportar, filtro
-                                    clicando nos titulos, pesquisa, badges de status do atendimento... <a
-                                        href="javascript:;" class="text-darker icon-move-right text-sm">Veja mais
+                                    clicando nos titulos, pesquisa, badges de status do atendimento...<a
+                                        href="http://3.141.10.15/" class="text-darker icon-move-right text-sm">Veja mais
                                         <i class="fas fa-arrow-right text-xs ms-1"></i>
                                     </a>
                                 </p>
@@ -355,7 +355,7 @@
                                 <h3 class="text-dark font-weight-bolder">Produção de Web-Site landing page para pets</h3>
                                 <p>
                                     Construido com um design moderno utilizando carregamento ao rolar a pagina para
-                                    maior conversão simples e objetiva... <a href="javascript:;"
+                                    maior conversão simples e objetiva... <a href="/pet.html"
                                         class="text-darker icon-move-right text-sm">Veja mais
                                         <i class="fas fa-arrow-right text-xs ms-1"></i>
                                     </a>
@@ -380,7 +380,7 @@
                                 </h3>
                                 <p>
                                     Design estruturado com foco em conversão, sensação de luxo e entendendo o publico
-                                    alvo... <a href="javascript:;" class="text-darker icon-move-right text-sm">Veja mais
+                                    alvo... <a href="/pet.html" class="text-darker icon-move-right text-sm">Veja mais
                                         <i class="fas fa-arrow-right text-xs ms-1"></i>
                                     </a>
                                 </p>
