--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                                 <h3 class="text-dark font-weight-bolder">Produção de Web-Site landing page para pets</h3>
                                 <p>
                                     Construido com um design moderno utilizando carregamento ao rolar a pagina para
-                                    maior conversão simples e objetiva... <a href="/site/pet.html"
+                                    maior conversão simples e objetiva... <a href="https://roversodev.github.io/pet-place/"
                                         class="text-darker icon-move-right text-sm">Veja mais
                                         <i class="fas fa-arrow-right text-xs ms-1"></i>
                                     </a>
@@ -380,7 +380,7 @@
                                 </h3>
                                 <p>
                                     Design estruturado com foco em conversão, sensação de luxo e entendendo o publico
-                                    alvo... <a href="/site/pet.html" class="text-darker icon-move-right text-sm">Veja mais
+                                    alvo... <a href="https://roversodev.github.io/pet-place/" class="text-darker icon-move-right text-sm">Veja mais
                                         <i class="fas fa-arrow-right text-xs ms-1"></i>
                                     </a>
                                 </p>
