--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                                 <p>
                                     Construido com um design moderno utilizando sidebar invés da convencional barra de
                                     navegação no topo, alguns cards na home page trazendo informações importantes,
-                                    suporte ao dark mode, sistema de notificações... <a href="http://3.141.10.15/"
+                                    suporte ao dark mode, sistema de notificações... <a href="https://app-django-rd.fly.dev/"
                                         class="text-darker icon-move-right text-sm">Veja mais
                                         <i class="fas fa-arrow-right text-xs ms-1"></i>
                                     </a>
@@ -330,7 +330,7 @@
                                 <p>
                                     Tabelas pensadas em soluções para o atendimento, tendo função de exportar, filtro
                                     clicando nos titulos, pesquisa, badges de status do atendimento...<a
-                                        href="http://3.141.10.15/" class="text-darker icon-move-right text-sm">Veja mais
+                                        href="https://app-django-rd.fly.dev/" class="text-darker icon-move-right text-sm">Veja mais
                                         <i class="fas fa-arrow-right text-xs ms-1"></i>
                                     </a>
                                 </p>
