--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
 
 
-    <link href="/assets/img/brand/favicon.png" rel="icon" type="image/png">
-
-
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700,900">
 
 
@@ -394,6 +391,34 @@
                             </div>
                         </div>
                     </div>
+
+
+
+
+
+                    <div class="col-lg-12 mt-5">
+                        <div class="row">
+                            <div class="col-lg-6 justify-content-center d-flex flex-column img1">
+                                <div class="card border-radius-lg">
+                                    <div class="d-block blur-shadow-image">
+                                        <img src="./assets/viagens.png" alt="img-blur-shadow-blog-2"
+                                            class="img-fluid border-radius-lg">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 justify-content-center d-flex flex-column ps-lg-5 pt-lg-0 pt-3">
+                                <h6 class="category text-info mt-3">WebSite Institucional</h6>
+                                <h3 class="text-dark font-weight-bolder">Produção de WebSite de Viagens</h3>
+                                <p>
+                                    Construido com um design moderno e animações ao passar os cards um site interativo com UX, FOCADO PARA DESKTOP... <a
+                                        href="https://roversodev.github.io/viagens/"
+                                        class="text-darker icon-move-right text-sm">Veja mais
+                                        <i class="fas fa-arrow-right text-xs ms-1"></i>
+                                    </a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -691,7 +716,6 @@
                 </div>
             </div>
         </section>
-
     </div>
 
 
@@ -738,10 +762,10 @@
                     </p>
                 </div>
                 <div class="col-lg-3 text-center text-lg-end">
-                    <a href="javascript:;" class="text-secondary me-xl-4 me-4">
+                    <a href="https://instagram.com/vitorroverso_" class="text-secondary me-xl-4 me-4">
                         <span class="fab fa-instagram text-lg"></span>
                     </a>
-                    <a href="javascript:;" class="text-secondary me-xl-4 me-4">
+                    <a href="https://wa.me/5511950619172" class="text-secondary me-xl-4 me-4">
                         <span class="fab fa-whatsapp text-lg"></span>
                     </a>
                     <a href="https://github.com/roversodev/" target="_blank" class="text-secondary">
