--- a/index.html
+++ b/index.html
@@ -410,8 +410,8 @@
                                 <h6 class="category text-info mt-3">WebSite Institucional</h6>
                                 <h3 class="text-dark font-weight-bolder">Produção de WebSite de Viagens</h3>
                                 <p>
-                                    Construido com um design moderno e animações ao passar os cards um site interativo com UX, FOCADO PARA DESKTOP... <a
-                                        href="https://roversodev.github.io/viagens/"
+                                    Construido com um design moderno e animações ao passar os cards um site interativo
+                                    com UX, FOCADO PARA DESKTOP... <a href="https://roversodev.github.io/viagens/"
                                         class="text-darker icon-move-right text-sm">Veja mais
                                         <i class="fas fa-arrow-right text-xs ms-1"></i>
                                     </a>
@@ -786,7 +786,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="./assets/js/plugins/choices.min.js" type="text/javascript"></script>
     <script src="./assets/js/material-kit.min.js" type="text/javascript"></script>
-    <script src="../../assets/js/plugins/countup.min.js"></script>
+    <script src="./assets/js/plugins/countup.min.js"></script>
     <script type="text/javascript">
         if (document.getElementById("state1")) {
             const countUp = new CountUp("state1", document.getElementById("state1").getAttribute("countTo"));
