--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
 
     <link type="text/css" href="./assets/css/material-kit.css" rel="stylesheet">
-    <script src="/assets/js/plugins/flatpickr.min.js"></script>
+    <script src="./assets/js/plugins/flatpickr.min.js"></script>
 </head>
 
 <body class="presentation-page bg-gray-100">
