--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     class="navbar navbar-expand-lg  blur border-radius-xl top-0 z-index-fixed shadow position-absolute my-3 p-2 start-0 end-0 mx-4">
                     <div class="container-fluid px-0">
                         <a class="navbar-brand font-weight-bolder ms-sm-3 text-sm" href="#" rel="tooltip"
-                            title="Designed and Coded by Creative Tim" data-placement="bottom">
+                            title="Roverso Dev" data-placement="bottom">
                             Roverso Dev
                         </a>
                         <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse"
@@ -414,6 +414,148 @@
                                     com UX, FOCADO PARA DESKTOP... <a href="https://roversodev.github.io/viagens/"
                                         class="text-darker icon-move-right text-sm">Veja mais
                                         <i class="fas fa-arrow-right text-xs ms-1"></i>
+                                    </a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                    <div class="col-lg-12 mt-5">
+                        <div class="row flex-row-reverse">
+                            <div class="col-lg-6 justify-content-center d-flex flex-column img4">
+                                <div class="card border-radius-lg">
+                                    <div class="blur-shadow-image">
+                                        <img src="./assets/pizzazz-dgif.gif" alt="img-blur-shadow-blog-2"
+                                            class="img-fluid border-radius-lg">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 pe-lg-5 justify-content-center d-flex flex-column pt-lg-0 pt-3">
+                                <h6 class="category text-info mt-3">Web-App</h6>
+                                <h3 class="text-dark font-weight-bolder">
+                                    Dashboard
+                                </h3>
+                                <p>
+                                    Design contendo interação 3D, com foco em exibir todas as informações nescessarias...
+                                    </a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                    <div class="col-lg-12 mt-5">
+                        <div class="row">
+                            <div class="col-lg-6 justify-content-center d-flex flex-column img1">
+                                <div class="card border-radius-lg">
+                                    <div class="d-block blur-shadow-image">
+                                        <img src="./assets/cardapio.jpeg" alt="img-blur-shadow-blog-2"
+                                            class="img-fluid border-radius-lg">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 justify-content-center d-flex flex-column ps-lg-5 pt-lg-0 pt-3">
+                                <h6 class="category text-info mt-3">Web-App</h6>
+                                <h3 class="text-dark font-weight-bolder">Tela de Cardapio</h3>
+                                <p>
+                                    Construido com um design moderno e funcional para cadastrar/atualizar as informações
+                                    de forma simples...
+                                    </a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                    <div class="col-lg-12 mt-5">
+                        <div class="row flex-row-reverse">
+                            <div class="col-lg-6 justify-content-center d-flex flex-column img4">
+                                <div class="card border-radius-lg">
+                                    <div class="blur-shadow-image">
+                                        <img src="./assets/receitas.jpeg" alt="img-blur-shadow-blog-2"
+                                            class="img-fluid border-radius-lg">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 pe-lg-5 justify-content-center d-flex flex-column pt-lg-0 pt-3">
+                                <h6 class="category text-info mt-3">Web-App</h6>
+                                <h3 class="text-dark font-weight-bolder">
+                                    Pagina de Receitas
+                                </h3>
+                                <p>
+                                    Exibir o custo de produção de cada item do cardá pio...
+                                    </a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-12 mt-5">
+                        <div class="row">
+                            <div class="col-lg-6 justify-content-center d-flex flex-column img1">
+                                <div class="card border-radius-lg">
+                                    <div class="d-block blur-shadow-image">
+                                        <img src="./assets/cadastrar-receitas.png" alt="img-blur-shadow-blog-2"
+                                            class="img-fluid border-radius-lg">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 justify-content-center d-flex flex-column ps-lg-5 pt-lg-0 pt-3">
+                                <h6 class="category text-info mt-3">Web-App</h6>
+                                <h3 class="text-dark font-weight-bolder">Tela de Cadastro de Receitas</h3>
+                                <p>
+                                    Construido com um design moderno e funcional para cadastrar/atualizar as receitas em 3 passos...
+                                    </a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-lg-12 mt-5">
+                        <div class="row flex-row-reverse">
+                            <div class="col-lg-6 justify-content-center d-flex flex-column img4">
+                                <div class="card border-radius-lg">
+                                    <div class="blur-shadow-image">
+                                        <img src="./assets/pedidos.png" alt="img-blur-shadow-blog-2"
+                                            class="img-fluid border-radius-lg">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 pe-lg-5 justify-content-center d-flex flex-column pt-lg-0 pt-3">
+                                <h6 class="category text-info mt-3">Web-App</h6>
+                                <h3 class="text-dark font-weight-bolder">
+                                    Tela de Pedidos
+                                </h3>
+                                <p>
+                                    Design moderno, com filtros e totalmente funcional vendo detalhes e resumo de faturamento e pedidos por dia...
+                                    </a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                    <div class="col-lg-12 mt-5">
+                        <div class="row">
+                            <div class="col-lg-6 justify-content-center d-flex flex-column img1">
+                                <div class="card border-radius-lg">
+                                    <div class="d-block blur-shadow-image">
+                                        <img src="./assets/perfil.png" alt="img-blur-shadow-blog-2"
+                                            class="img-fluid border-radius-lg">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 justify-content-center d-flex flex-column ps-lg-5 pt-lg-0 pt-3">
+                                <h6 class="category text-info mt-3">Web-App</h6>
+                                <h3 class="text-dark font-weight-bolder">Tela de Perfil</h3>
+                                <p>
+                                    Para atualizar as informações do usuário e acompanhar dispositivos logados...
                                     </a>
                                 </p>
                             </div>
