--- a/index.html
+++ b/index.html
@@ -561,6 +561,34 @@
                             </div>
                         </div>
                     </div>
+
+
+
+
+                    <div class="col-lg-12 mt-5">
+                        <div class="row flex-row-reverse">
+                            <div class="col-lg-6 justify-content-center d-flex flex-column img4">
+                                <div class="card border-radius-lg">
+                                    <div class="blur-shadow-image">
+                                        <img src="./assets/jrbrasil.png" alt="img-blur-shadow-blog-2"
+                                            class="img-fluid border-radius-lg">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 pe-lg-5 justify-content-center d-flex flex-column pt-lg-0 pt-3">
+                                <h6 class="category text-info mt-3">Landing Page</h6>
+                                <h3 class="text-dark font-weight-bolder">
+                                    JrBrasil Contábil
+                                </h3>
+                                <p>
+                                    Design moderno, posicionando a empresa online da forma correta focando na experiência do usuário e levando direto ao ponto... <a href="https://roversodev.github.io/jrbrasil/"
+                                    class="text-darker icon-move-right text-sm">Veja mais
+                                    <i class="fas fa-arrow-right text-xs ms-1"></i>
+                                    </a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
