--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
 
     <link type="text/css" href="./assets/css/material-kit.css" rel="stylesheet">
-    <script src="./assets/js/plugins/flatpickr.min.js"></script>
 </head>
 
 <body class="presentation-page bg-gray-100">
@@ -581,7 +580,7 @@
                                     JrBrasil Contábil
                                 </h3>
                                 <p>
-                                    Design moderno, posicionando a empresa online da forma correta focando na experiência do usuário e levando direto ao ponto... <a href="https://roversodev.github.io/jrbrasil/"
+                                    Design moderno, posicionando a empresa online da forma correta focando na experiência do usuário e levando direto ao ponto... <a href="https://roversodev.github.io/jrbrasill/"
                                     class="text-darker icon-move-right text-sm">Veja mais
                                     <i class="fas fa-arrow-right text-xs ms-1"></i>
                                     </a>
