--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                                     navegação no topo, alguns cards na home page trazendo informações importantes,
                                     suporte ao dark mode, sistema de notificações... <a
                                         href="https://app-django-rd.fly.dev/"
-                                        class="text-darker icon-move-right text-sm">Veja mais
+                                        class="text-info icon-move-right text-sm">Ver ao vivo
                                         <i class="fas fa-arrow-right text-xs ms-1"></i>
                                     </a>
                                 </p>
@@ -330,7 +330,7 @@
                                     Tabelas pensadas em soluções para o atendimento, tendo função de exportar, filtro
                                     clicando nos titulos, pesquisa, badges de status do atendimento...<a
                                         href="https://app-django-rd.fly.dev/"
-                                        class="text-darker icon-move-right text-sm">Veja mais
+                                        class="text-info icon-move-right text-sm">Ver ao vivo
                                         <i class="fas fa-arrow-right text-xs ms-1"></i>
                                     </a>
                                 </p>
@@ -358,7 +358,7 @@
                                     Construido com um design moderno utilizando carregamento ao rolar a pagina para
                                     maior conversão simples e objetiva... <a
                                         href="https://roversodev.github.io/pet-place/"
-                                        class="text-darker icon-move-right text-sm">Veja mais
+                                        class="text-info icon-move-right text-sm">Ver ao vivo
                                         <i class="fas fa-arrow-right text-xs ms-1"></i>
                                     </a>
                                 </p>
@@ -383,7 +383,7 @@
                                 <p>
                                     Design estruturado com foco em conversão, sensação de luxo e entendendo o publico
                                     alvo... <a href="https://roversodev.github.io/pet-place/"
-                                        class="text-darker icon-move-right text-sm">Veja mais
+                                        class="text-info icon-move-right text-sm">Ver ao vivo
                                         <i class="fas fa-arrow-right text-xs ms-1"></i>
                                     </a>
                                 </p>
@@ -411,7 +411,7 @@
                                 <p>
                                     Construido com um design moderno e animações ao passar os cards um site interativo
                                     com UX, FOCADO PARA DESKTOP... <a href="https://roversodev.github.io/viagens/"
-                                        class="text-darker icon-move-right text-sm">Veja mais
+                                        class="text-info icon-move-right text-sm">Ver ao vivo
                                         <i class="fas fa-arrow-right text-xs ms-1"></i>
                                     </a>
                                 </p>
@@ -580,14 +580,40 @@
                                     JrBrasil Contábil
                                 </h3>
                                 <p>
-                                    Design moderno, posicionando a empresa online da forma correta focando na experiência do usuário e levando direto ao ponto... <a href="https://roversodev.github.io/jrbrasill/"
-                                    class="text-darker icon-move-right text-sm">Veja mais
+                                    Design moderno, posicionando a empresa online da forma correta focando na experiência do usuário e levando direto ao ponto... 
+                                    <a href="https://roversodev.github.io/jrbrasill/"
+                                    class="text-info icon-move-right text-sm">Ver ao vivo
                                     <i class="fas fa-arrow-right text-xs ms-1"></i>
                                     </a>
                                 </p>
                             </div>
                         </div>
                     </div>
+
+                    <div class="col-lg-12 mt-5">
+                        <div class="row">
+                            <div class="col-lg-6 justify-content-center d-flex flex-column img1">
+                                <div class="card border-radius-lg">
+                                    <div class="d-block blur-shadow-image">
+                                        <img src="./assets/confraria.png" alt="img-blur-shadow-blog-2"
+                                            class="img-fluid border-radius-lg">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 justify-content-center d-flex flex-column ps-lg-5 pt-lg-0 pt-3">
+                                <h6 class="category text-info mt-3">Landing Page/Institucional</h6>
+                                <h3 class="text-dark font-weight-bolder">Tela de Perfil</h3>
+                                <p>
+                                    Site Institucional para a confraria Nunes e Vieira, pagina simples e objetiva com identidade visual da marca...
+                                    <a href="https://confraria.nunesvieira.com/"
+                                    class="text-info icon-move-right text-sm">Ver ao vivo
+                                    <i class="fas fa-arrow-right text-xs ms-1"></i>
+                                    </a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
