--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
                             </div>
                             <div class="col-lg-6 justify-content-center d-flex flex-column ps-lg-5 pt-lg-0 pt-3">
                                 <h6 class="category text-info mt-3">Landing Page/Institucional</h6>
-                                <h3 class="text-dark font-weight-bolder">Tela de Perfil</h3>
+                                <h3 class="text-dark font-weight-bolder">Confraria Nunes e Vieira</h3>
                                 <p>
                                     Site Institucional para a confraria Nunes e Vieira, pagina simples e objetiva com identidade visual da marca...
                                     <a href="https://confraria.nunesvieira.com/"
